# sdk-python

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
sendpigeon/: __init__.py  _http.py  _shared.py  async_client.py  client.py  errors.py  types.py  webhooks.py
sendpigeon/resources/: __init__.py  api_keys.py  broadcasts.py  contacts.py  domains.py  emails.py  suppressions.py  templates.py  tracking.py
tests/: test_client.py  test_webhooks.py
