[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sendpigeon"
version = "0.2.0"
description = "Official Python SDK for SendPigeon - Transactional Email API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "SendPigeon", email = "support@sendpigeon.dev" }]
keywords = ["email", "transactional", "api", "sendpigeon"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = ["httpx>=0.25.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "pytest-httpx>=0.21", "ruff>=0.1"]

[project.urls]
Homepage = "https://sendpigeon.dev"
Documentation = "https://sendpigeon.dev/docs"
Repository = "https://github.com/sendpigeon/sdk-python"

[tool.hatch.build.targets.wheel]
packages = ["sendpigeon"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
